tests/semantic_errors/andrei32_3.tl
require "ifj21"

global name : function (integer, number, number) : string, string, string
function name    (a : integer, b : number, a : number) : string, string, string end

function main()
    local id : integer = 102
    while 1 do
        while 1 do
            while 1 do
                while 1 do
                    id = 90
                    local num : string = "HAHA"
                end
            end
        end
        num = "ERR?"
    end

end

main()
